Write a JS program to create a country and its capital dictionary

--- a/Lecture 57/index.html
+++ b/Lecture 57/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="style.js"></script>
     <script src="quiz1.js"></script>
+    <script src="quiz5.js"></script>
 </body>
 </html>
