--- a/Lecture 73 and 77 Dynamic Website Builder/index.html
+++ b/Lecture 73 and 77 Dynamic Website Builder/index.html
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="card">
             <div class="image">
-                <img src="https://i.ytimg.com/vi/tVzUXW6siu0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLACwWOixJVrKLFindK92kYMgTcQbw"
+                <img src="thumbnail.webp"
                     alt="">
                 <div class="capsule">31:06</div>
             </div>
